# python-dj-booking-app

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/: Dockerfile
src/: admin.py  authentication.py  celery.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/migrations/: 0001_initial.py
src/static/js/: index.js
src/templates/src/: base.html  side_nav.html
src/templates/src/admin/: booking_list.html  booking_settings.html  dashboard.html
src/templates/src/user/: booking_done.html  booking_wizard.html
