[tool.poetry]
name = "python-dj-booking-app"
version = "0.1.0"
description = ""
authors = ["tan.truong <tan.truong@paradox.ai>"]
readme = "README.md"
packages = [{include = "python_dj_booking_app"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
django-hvad = "^1.8.0"
django-formtools = "^2.4"
celery = "^5.2.7"
mysqlclient = "^2.1.1"
redis = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
